--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,18 +6,14 @@ name: Node.js CI
 on:
   push:
     branches: [ "main" ]
-  paths:
-    - "sundaes-on-demand"
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    default:
-      run:
-        working-directory: "./sundaes-on-demand"
+    env:
+      working-directory: "./sundaes-on-demand"
 
     strategy:
       matrix:
