--- a/sundaes-on-demand/.eslintrc.json
+++ b/sundaes-on-demand/.eslintrc.json
@@ -1,12 +1,13 @@
 {
-  "plugins": [
-    "jest-dom",
-    "testing-library"
-  ],
+  "plugins": ["jest-dom", "testing-library", "prettier"],
   "extends": [
     "react-app",
     "react-app/jest",
     "plugin:testing-library/react",
-    "plugin:jest-dom/recommended"
-  ]
+    "plugin:jest-dom/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
