--- a/sundaes-on-demand/package.json
+++ b/sundaes-on-demand/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-testing-library": "^5.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "msw": "^1.0.0"
+    "msw": "^1.0.0",
+    "prettier": "2.8.3"
   }
 }
