adapt prettier rule be changed

--- a/sundaes-on-demand/src/.prettierrc.json
+++ b/sundaes-on-demand/src/.prettierrc.json
@@ -1,7 +1,8 @@
 {
   "tabWidth": 2,
   "singleQuote": false,
-  "semi": false,
+  "semi": true,
   "bracketSpacing": true,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "printWidth": 120
 }
